<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FilteringActivity">


    <EditText
        android:id="@+id/editTextNombreSci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:ems="10"
        android:hint="@string/nombre_sci"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextFlowerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="441dp"
        android:ems="10"
        android:hint="@string/flower_color"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <ToggleButton
        android:id="@+id/toggleButtonEdible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="315dp"
        android:textOff="@string/not_edible"
        android:textOn="@string/edible" />

    <ToggleButton
        android:id="@+id/toggleButtonVegetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButtonEdible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="294dp"
        android:textOff="@string/not_vegetable"
        android:textOn="@string/vegetable" />

    <Button
        android:id="@+id/buttonApply"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="159dp"
        android:text="@string/apply" />

</RelativeLayout>